{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 38,
  "lineage": "00b092c1-6957-69a9-bb97-daa22e9ff897",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "k8s-node-1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251002",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/zones/asia-southeast2-b/disks/k8s-node-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/final-project-300usd/zones/asia-southeast2-b/instances/k8s-node-1",
            "instance_id": "5669263074643017070",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "rith:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCfNibhIH9i3cakBS/bxCMhkJV5E+XbulWmgGuDUmkfL1/Uo6Mm0Gqmy0NLduOQB4Jqfw8japoY7KlzUFgP9nesX62pqccIRZR6uUaS419xafbo3riH+C3CnnSv6E5IeUXmVldC4MfLk/YY8jAC0y6nI5vr5iN7l4NGdOUuRJoqwnQyXy/we7D1f4ZHerFCAcYofMd8dhnd4iDy3mVH1xjzqU7B/A5i4c8QyfZEAw+2E8bt8kaEu6gx9XHHJvjiFbtCIEdIjVzFYtWVC+O/FKoZsTevAKJfCO8MO3eloTnUxz4WB7yO5JevwhEpfy+ArAZ3EKpAnAkqGApVGJ1huHFtRnUvnR0k+AxQeqgQIFpg23PP7j6Ew3o56uhWU4BMlh5Pj4xdIbJ5mqsjUMZq8n5XxpzURhJMO2+Wq4tbpHgc9R1u [...]
            },
            "metadata_fingerprint": "_5Ws0jmv8OI=",
            "name": "k8s-node-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.254.33",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/networks/k8s-ha-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/regions/asia-southeast2/subnetworks/k8s-ha-subnet",
                "subnetwork_project": "final-project-300usd"
              }
            ],
            "project": "final-project-300usd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/zones/asia-southeast2-b/instances/k8s-node-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s",
              "master",
              "worker"
            ],
            "tags_fingerprint": "JwaVo4xwcgs=",
            "zone": "asia-southeast2-b"
          },
          "dependencies": [
            "module.network.google_compute_network.this",
            "module.network.google_compute_subnetwork.this"
          ]
        },
        {
          "index_key": "k8s-node-2",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251002",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/zones/asia-southeast2-b/disks/k8s-node-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/final-project-300usd/zones/asia-southeast2-b/instances/k8s-node-2",
            "instance_id": "7458669376415595886",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "rith:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCfNibhIH9i3cakBS/bxCMhkJV5E+XbulWmgGuDUmkfL1/Uo6Mm0Gqmy0NLduOQB4Jqfw8japoY7KlzUFgP9nesX62pqccIRZR6uUaS419xafbo3riH+C3CnnSv6E5IeUXmVldC4MfLk/YY8jAC0y6nI5vr5iN7l4NGdOUuRJoqwnQyXy/we7D1f4ZHerFCAcYofMd8dhnd4iDy3mVH1xjzqU7B/A5i4c8QyfZEAw+2E8bt8kaEu6gx9XHHJvjiFbtCIEdIjVzFYtWVC+O/FKoZsTevAKJfCO8MO3eloTnUxz4WB7yO5JevwhEpfy+ArAZ3EKpAnAkqGApVGJ1huHFtRnUvnR0k+AxQeqgQIFpg23PP7j6Ew3o56uhWU4BMlh5Pj4xdIbJ5mqsjUMZq8n5XxpzURhJMO2+Wq4tbpHgc9R1u [...]
            },
            "metadata_fingerprint": "_5Ws0jmv8OI=",
            "name": "k8s-node-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.128.122.41",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/networks/k8s-ha-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/regions/asia-southeast2/subnetworks/k8s-ha-subnet",
                "subnetwork_project": "final-project-300usd"
              }
            ],
            "project": "final-project-300usd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/zones/asia-southeast2-b/instances/k8s-node-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s",
              "master",
              "worker"
            ],
            "tags_fingerprint": "JwaVo4xwcgs=",
            "zone": "asia-southeast2-b"
          },
          "dependencies": [
            "module.network.google_compute_network.this",
            "module.network.google_compute_subnetwork.this"
          ]
        },
        {
          "index_key": "k8s-node-3",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251002",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/zones/asia-southeast2-b/disks/k8s-node-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/final-project-300usd/zones/asia-southeast2-b/instances/k8s-node-3",
            "instance_id": "5608829457404394862",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "rith:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCfNibhIH9i3cakBS/bxCMhkJV5E+XbulWmgGuDUmkfL1/Uo6Mm0Gqmy0NLduOQB4Jqfw8japoY7KlzUFgP9nesX62pqccIRZR6uUaS419xafbo3riH+C3CnnSv6E5IeUXmVldC4MfLk/YY8jAC0y6nI5vr5iN7l4NGdOUuRJoqwnQyXy/we7D1f4ZHerFCAcYofMd8dhnd4iDy3mVH1xjzqU7B/A5i4c8QyfZEAw+2E8bt8kaEu6gx9XHHJvjiFbtCIEdIjVzFYtWVC+O/FKoZsTevAKJfCO8MO3eloTnUxz4WB7yO5JevwhEpfy+ArAZ3EKpAnAkqGApVGJ1huHFtRnUvnR0k+AxQeqgQIFpg23PP7j6Ew3o56uhWU4BMlh5Pj4xdIbJ5mqsjUMZq8n5XxpzURhJMO2+Wq4tbpHgc9R1u [...]
            },
            "metadata_fingerprint": "_5Ws0jmv8OI=",
            "name": "k8s-node-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.101.165.111",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/networks/k8s-ha-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/regions/asia-southeast2/subnetworks/k8s-ha-subnet",
                "subnetwork_project": "final-project-300usd"
              }
            ],
            "project": "final-project-300usd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/zones/asia-southeast2-b/instances/k8s-node-3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s",
              "master",
              "worker"
            ],
            "tags_fingerprint": "JwaVo4xwcgs=",
            "zone": "asia-southeast2-b"
          },
          "dependencies": [
            "module.network.google_compute_network.this",
            "module.network.google_compute_subnetwork.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-21T19:30:16.933-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/final-project-300usd/global/firewalls/k8s-ha-external",
            "log_config": [],
            "name": "k8s-ha-external",
            "network": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/networks/k8s-ha-vpc",
            "priority": 1000,
            "project": "final-project-300usd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/firewalls/k8s-ha-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-21T19:30:16.938-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/final-project-300usd/global/firewalls/k8s-ha-internal",
            "log_config": [],
            "name": "k8s-ha-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/networks/k8s-ha-vpc",
            "priority": 1000,
            "project": "final-project-300usd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/firewalls/k8s-ha-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC for k8s-ha automation",
            "enable_ula_internal_ipv6": false,
            "id": "projects/final-project-300usd/global/networks/k8s-ha-vpc",
            "mtu": 0,
            "name": "k8s-ha-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3491975072323075907",
            "project": "final-project-300usd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/networks/k8s-ha-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-21T19:30:17.820-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/final-project-300usd/regions/asia-southeast2/subnetworks/k8s-ha-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "k8s-ha-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/global/networks/k8s-ha-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "final-project-300usd",
            "purpose": "PRIVATE",
            "region": "asia-southeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/final-project-300usd/regions/asia-southeast2/subnetworks/k8s-ha-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    }
  ]
}